--- a/payment/payment.html
+++ b/payment/payment.html
@@ -34,7 +34,7 @@
             paypal.Buttons({
                 style: {
                     shape: 'pill',
-                    color: 'black',
+                    color: 'gold',
                     layout: 'horizontal',
                     label: 'paypal',
 
