--- a/payment/payment.html
+++ b/payment/payment.html
@@ -6,7 +6,7 @@
             <div style="margin-bottom: 1.25rem;">
                 <p>如果你覺得好用，請給我一些支持。</p>
                 <select id="item-options">
-                    <option value="請杯咖啡" price="150">請杯咖啡 - 150 TWD</option>
+                    <option value="喝杯咖啡" price="150">喝杯咖啡 - 150 TWD</option>
                     <option value="吃點好料" price="300">吃點好料 - 300 TWD</option>
                     <option value="分享快樂" price="600">分享快樂 - 600 TWD</option>
                     <option value="分享快樂" price="1000">分享快樂 - 1000 TWD</option>
