--- a/payment/payment.html
+++ b/payment/payment.html
@@ -27,7 +27,7 @@
             if (!isNaN(quantity)) {
                 quantitySelect.style.visibility = "visible";
             }
-            var orderDescription = '如果你覺得有幫助，請給我一些支持。';
+            var orderDescription = '如果你喜歡，請給我一些支持。';
             if (orderDescription === '') {
                 orderDescription = 'Item';
             }
